crash / strange mesh deformation when applying scale to multiresolution mesh with "Simplify" active #40582

Closed
opened 2014-06-11 18:15:50 +02:00 by Tilman Helbig · 6 comments

Mac OS X 10.9.3
AMD Radeon HD 6750M 1024 MB

Broken: 2.70a f93bc76

When the scale is applied to an object with Multiresolution Modifier and Simplify is set to a lower level than the Multires Modifier this results in strange behaviour. When Simplify is set to 0 this results in Blender crashing on my system. When Simplify is set to anything lower than the level of the Multires (other than 0) applying the scale will result in the mesh exploding.

instructions: Try applying the scale of the object in the provided .blend with simplify set to 0, 1 and 2.

apply_scale_simplify_bug_demo.blend

Mac OS X 10.9.3 AMD Radeon HD 6750M 1024 MB Broken: 2.70a f93bc76 When the scale is applied to an object with Multiresolution Modifier and Simplify is set to a lower level than the Multires Modifier this results in strange behaviour. When Simplify is set to 0 this results in Blender crashing on my system. When Simplify is set to anything lower than the level of the Multires (other than 0) applying the scale will result in the mesh exploding. instructions: Try applying the scale of the object in the provided .blend with simplify set to 0, 1 and 2. [apply_scale_simplify_bug_demo.blend](https://archive.blender.org/developer/F93912/apply_scale_simplify_bug_demo.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TilmanHelbig

Added subscriber: @TilmanHelbig
Author

This is especially annoying when the Multires Modifier is hidden because you won't notice that your mesh is broken until you unhide it again.

This is especially annoying when the Multires Modifier is hidden because you won't notice that your mesh is broken until you unhide it again.

This issue was referenced by 20550d6f7f

This issue was referenced by 20550d6f7f33f2d1a2bcc043ae17b474bec85f66

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 20550d6f7f.

Closed by commit 20550d6f7f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40582
No description provided.