Fix T40582: issues with apply scale when having multires and scene simplify

Reshape and applying scale matrix on multires needs to create DM with simplify
setting disabled. Added a special flag to modifier apply for this now.