source/blender/modifiers/intern/MOD_multires.c
@@ -74,7 +74,8 @@ static DerivedMesh *applyModifier(ModifierData *md, Object *ob, DerivedMesh *dm,
 	MultiresModifierData *mmd = (MultiresModifierData *)md;
 	DerivedMesh *result;
 	Mesh *me = (Mesh *)ob->data;
-	const int useRenderParams = flag & MOD_APPLY_RENDER;
+	const bool useRenderParams = (flag & MOD_APPLY_RENDER) != 0;
+	const bool ignore_simplify = (flag & MOD_APPLY_IGNORE_SIMPLIFY) != 0;
 	MultiresFlags flags = 0;
 	const bool has_mask = CustomData_has_layer(&me->ldata, CD_GRID_PAINT_MASK);
 
@@ -90,6 +91,9 @@ static DerivedMesh *applyModifier(ModifierData *md, Object *ob, DerivedMesh *dm,
 
 	if (useRenderParams)
 		flags |= MULTIRES_USE_RENDER_PARAMS;
+
+	if (ignore_simplify)
+		flags |= MULTIRES_IGNORE_SIMPLIFY;
 
 	result = multires_make_derived_from_derived(dm, mmd, ob, flags);
 
